[package]
name = "rustlog"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.11.0", features = ["axum", "redoc"] }
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["headers"] }
chrono = { version = "0.4.27", features = ["serde"] }
clap = { version = "4.4.1", features = ["derive"] }
clickhouse = { version = "0.11.5", default-features = false, features = [
    "lz4",
] }
dashmap = { version = "5.5.3", features = ["serde"] }
flate2 = "1.0.27"
futures = "0.3.28"
indexmap = "1.9.3"
lazy_static = "1.4.0"
mimalloc = { version = "0.1.38", default-features = false }
mime_guess = "2.0.4"
prometheus = "0.13.3"
rand = "0.8.5"
rayon = "1.7.0"
reqwest = { version = "0.11.20", features = [
    "rustls-tls",
], default-features = false }
rust-embed = { version = "8.0.0", features = ["interpolate-folder-path"] }
schemars = "0.8.13"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["preserve_order"] }
serde_repr = "0.1.16"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["sync", "signal", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.4.3", features = [
    "trace",
    "cors",
    "normalize-path",
    "compression-full",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
twitch-irc = { version = "5.0.1", default-features = false, features = [
    "metrics-collection",
    "transport-tcp-rustls-webpki-roots",
] }
twitch_api2 = { version = "0.6.1", features = [
    "reqwest",
    "helix",
    "twitch_oauth2",
] }
twitch = { git = "https://github.com/jprochazk/twitch-rs", features = ["simd"] }
axum-prometheus = "0.4.0"
metrics-prometheus = "0.4.1"
async-trait = "0.1.73"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
strip = true
lto = "thin"
